--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 */acoustic-model/mixture_weights filter=lfs diff=lfs merge=lfs -text
 */acoustic-model/means filter=lfs diff=lfs merge=lfs -text
 */acoustic-model/variances filter=lfs diff=lfs merge=lfs -text
+*.wav filter=lfs diff=lfs merge=lfs -text
