--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@
 */acoustic-model/means filter=lfs diff=lfs merge=lfs -text
 */acoustic-model/variances filter=lfs diff=lfs merge=lfs -text
 *.wav filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
