--- a/.gitattributes
+++ b/.gitattributes
@@ -4,5 +4,10 @@
 */acoustic-model/mixture_weights filter=lfs diff=lfs merge=lfs -text
 */acoustic-model/means filter=lfs diff=lfs merge=lfs -text
 */acoustic-model/variances filter=lfs diff=lfs merge=lfs -text
+*/acoustic-model-ptm/mdef filter=lfs diff=lfs merge=lfs -text
+*/acoustic-model-ptm/transition_matrices filter=lfs diff=lfs merge=lfs -text
+*/acoustic-model-ptm/means filter=lfs diff=lfs merge=lfs -text
+*/acoustic-model-ptm/variances filter=lfs diff=lfs merge=lfs -text
+*.raw filter=lfs diff=lfs merge=lfs -text
 *.wav filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
